--- a/public/Birhtday_invite.html
+++ b/public/Birhtday_invite.html
@@ -1,14 +1,27 @@
 
-
-
-<h1>It's My Birthday!</h1>
-<h2>On the 29th February</h2>
-<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg" alt="Birthday cake" width="200" height="200" />
-<h3>What to bring:</h3>
-<ul>
-    <li>Baloons (I love baloons)</li>
-    <li>Cake (I'm really good at eating)</li>
-    <li>An appetite (There will be lots of food)</li>
-</ul>
-<h2>This is where you need to go:</h2>
-<a href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">Google map link</a>
+<!DOCTYPE html>
+<html lang="en-US" style="margin: 0; background-color: #CA7842; font-family: Noto Sans, sans-serif; height: 100%;">
+    <head>
+         <meta charset="UTF-8">
+         <title>My portfolio page</title>
+         <link rel="stylesheet" href="./styles.css">
+         <link rel="preconnect" href="https://fonts.googleapis.com">
+         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    </head>
+    <body style="margin: 0; background-image:url(../assets/images/il_fullxfull.2627996596_7c0u.png); background-size: 100% ; background-position: center; max-width: 1200px; height: 100%;">
+        <div style="text-align: center;">
+            <h1 style="margin-top: 0px;">It's My Birthday!</h1>
+            <h2>On the 29th February</h2>
+            <img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg" alt="Birthday cake" width="200" height="200" />
+            <h3>What to bring:</h3>
+            <ul style="list-style-position: inside;">
+                <li>Baloons (I love baloons)</li>
+                <li>Cake (I'm really good at eating)</li>
+                <li>An appetite (There will be lots of food)</li>
+            </ul>
+            <h2>This is where you need to go:</h2>
+            <a href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">Google map link</a>
+        </div>
+    </body>
+</html>
