--- a/public/Movie_ranking.html
+++ b/public/Movie_ranking.html
@@ -1,14 +1,28 @@
 <!-- Write your code below --> 
- <h1> The best movies according to me </h1>
- <h2> My top 3 movies of all-time</h2>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+        <title>Page Title</title>
+    </head> 
+ 
+    <body style="text-align: center;">
+        <h1 style="margin-top: 10px ;"> The best movies according to me </h1>
+        <h2> My top 3 movies of all-time</h2>
 
- <hr />
+        <hr />
 
- <h3>Spider-man: Across the Spider-Verse</h3>
- <p>This is probably my favorite movie of all time. I love the animation and the story.</p>
+        <a href="https://www.imdb.com/title/tt9362722/" style="font-size: 1.5rem;"> Spider-man: Across the Spider-Verse🔗</a>
+        <p>This is probably my favorite movie of all time. I love the animation and the story.</p>
 
- <h3>Pacific Rim</h3>
- <p>It's definetely up there. Great action and visuals.</p>
+        <a href="https://www.imdb.com/title/tt1663662/?ref_=nv_sr_srsg_3_tt_8_nm_0_in_0_q_pacific" style="font-size: 1.5rem;"> Pacific Rim🔗 </a>
+        <p>It's definetely up there. Great action and visuals.</p>
 
- <h3>Forrest Gump</h3>
- <p>I really enjoy the story and the message it sends.</p>
+        <a href="https://www.imdb.com/title/tt0109830/?ref_=fn_all_ttl_1" style="font-size: 1.5rem;"> Forrest Gump🔗 </a>
+        <p>I really enjoy the story and the message it sends.</p>
+    </body>
