--- a/public/hobbies.html
+++ b/public/hobbies.html
@@ -20,7 +20,7 @@
         <h2>Miscellaneous</h2>
         <p>I love learning about topics such as space, technologies, animals. I watch a lot of docutmentaries and videos on these topics.</p>
         <a href="../index.html">Main page</a>
-        <a href="./contact.html">My contact info</a>
+        <a href="./contact copy.html">My contact info</a>
         <hr/>
         <footer>
             <small>
